<resources>
    <string name="app_name">CarbonApp</string>
    <string name="home">Home</string>
    <string name="goals">Goals</string>
    <string name="stats">Stats</string>
    <string name="offset">Offset</string>
    <string name="offset_provider">Offset Provider:</string>
    <string name="offset_carbon">Offset carbon</string>
    <string name="sample_price">Sample Price</string>
    <string name="sample_description">Sample Description</string>
    <string name="invalid_input">Invalid input</string>
    <string name="failed_update">Failed to update</string>
    <string name="you">Your carbon footprint: </string>
    <string name="goal_screen_title">How does my weekly carbon usage compare?</string>
    <string name="home_screen_title">Weekly carbon usage summary compared to average user</string>
    <string name="choose_amount">Choose amount</string>
    <string name="_1000">1000</string>
    <string name="g">g</string>
    <string name="confirm">Confirm</string>
    <string name="choose_new_amount">Choose new amount</string>
</resources>