<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chooseOffsetAmount"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center" android:orientation="vertical"  >

    <TextView
        android:id="@+id/offsetChoiceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_amount" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/offsetAmountEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_1000"
            android:imeOptions="actionDone"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g" />

    </LinearLayout>

    <Button
        android:id="@+id/confirmOffsetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/confirm"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/responseMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>